--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "http://kareem-r.github.io/Maltimart-reactjs",
-  "name": "maltimart_project",
+  "name": "gmcandamebel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
